Store basic informations from twitter

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 NODE_DB_ADDRESS=mongodb://localhost:27017
 NODE_PORT=8001
-DEBUG=*
+
+DEBUG=NODE_ID=data-source
+
+TWITTER_CONSUMER_KEY=SECRET
+TWITTER_CONSUMER_SECRET=SECRET
+TWITTER_ACCESS_TOKEN_KEY=SECRET
+TWITTER_ACCESS_TOKEN_SECRET=SECRET
