--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -15,6 +14,7 @@
     "lodash": "^4.13.1",
     "mongoose": "^4.5.4",
     "node-fetch": "^1.5.3",
+    "seneca": "^2.1.0",
     "twitter": "^1.3.0"
   },
   "devDependencies": {
