--- a/src/data-sources/.env.example
+++ b/src/data-sources/.env.example
@@ -1,7 +1,7 @@
 NODE_DB_ADDRESS=mongodb://localhost:27017
 NODE_PORT=8001
 
-DEBUG=NODE_ID=data-source
+DEBUG=data-sources:*
 
 TWITTER_CONSUMER_KEY=SECRET
 TWITTER_CONSUMER_SECRET=SECRET
