--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "2"
 services:
-  web-app:
-    build: ./awesome-conferences-web-app
+  web:
+    build: ./src/web/
     volumes:
-      - ./:/usr/src/app
+      - ./src/web/:/usr/src/app/
     ports:
       - "8000:8000"
     links:
@@ -13,9 +13,9 @@ services:
       - NODE_PORT=8000
       - DEBUG=*
   data-sources:
-    build: ./awesome-conferences-data-sources
+    build: ./src/data-sources/
     volumes:
-      - ./:/usr/src/app
+      - ./src/data-sources/:/usr/src/app/
     ports:
       - "8001:8001"
     links:
