--- a/src/api/package.json
+++ b/src/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-sources",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,11 @@
   "dependencies": {
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
+    "express": "^4.14.0",
     "global": "^4.3.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.4",
-    "node-fetch": "^1.5.3",
-    "twitter": "^1.3.0"
+    "node-fetch": "^1.5.3"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
