--- a/src/collectors/.env.example
+++ b/src/collectors/.env.example
@@ -1,7 +1,7 @@
 NODE_DB_ADDRESS=mongodb://localhost:27017
 NODE_PORT=8001
 
-DEBUG=data-sources:*
+DEBUG=collectors:*
 
 TWITTER_CONSUMER_KEY=SECRET
 TWITTER_CONSUMER_SECRET=SECRET
