--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
+    "express": "^4.14.0",
     "global": "^4.3.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.4",
