Collectors refactor. Move to resources

--- a/src/collectors/.env.example
+++ b/src/collectors/.env.example
@@ -7,3 +7,5 @@ TWITTER_CONSUMER_KEY=SECRET
 TWITTER_CONSUMER_SECRET=SECRET
 TWITTER_ACCESS_TOKEN_KEY=SECRET
 TWITTER_ACCESS_TOKEN_SECRET=SECRET
+
+YOUTUBE_APP_KEY=SECRET
