--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -3,15 +3,15 @@ FROM node:6.3.0
 MAINTAINER cmwd <pwojtkowiak@gmail.com>
 
 # Create app directory
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
+RUN mkdir -p /usr/src/api
+WORKDIR /usr/src/api
 
 # Install app dependencies
-COPY package.json /usr/src/app/
+COPY package.json /usr/src/api/
 RUN npm install
 
 # Bundle app source
-COPY . /usr/src/app
+COPY . /usr/src/api
 
 EXPOSE 8002
 CMD [ "npm", "start" ]
