--- a/src/web/package.json
+++ b/src/web/package.json
@@ -4,35 +4,46 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "inspector": "node --debug-brk --inspect index.js",
+    "start": "./node_modules/.bin/babel-node index.js",
+    "inspector": "./node_modules/.bin/babel-node --debug-brk --inspect index.js",
     "test": "./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet",
     "test-inspector": "node --debug-brk --inspect ./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "co": "^4.6.0",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "global": "^4.3.0",
     "lodash": "^4.13.1",
-    "mongoose": "^4.5.4",
     "node-fetch": "^1.5.3",
-    "seneca": "^2.1.0"
+    "pug": "^2.0.0-beta6",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
     "eslint": "^3.1.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.3",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
     "faucet": "0.0.1",
+    "http-server": "^0.9.0",
     "path-alias": "0.0.7",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
-    "tape": "^4.6.0"
+    "tape": "^4.6.0",
+    "webpack": "^1.13.2"
   },
   "engines": {
     "node": "6.3.0"
