--- a/src/web/package.json
+++ b/src/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "co": "^4.6.0",
@@ -25,6 +26,7 @@
     "node-fetch": "^1.5.3",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.1",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
