--- a/src/web/package.json
+++ b/src/web/package.json
@@ -4,19 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/babel-node index.js",
-    "inspector": "./node_modules/.bin/babel-node --debug-brk --inspect index.js",
+    "start": "./bin/start",
+    "build": "./bin/build",
+    "debug": "./bin/debug",
     "test": "./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet",
     "test-inspector": "node --debug-brk --inspect ./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
+    "bunyan-request-logger": "^1.1.0",
+    "classnames": "^2.2.5",
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
@@ -29,18 +27,25 @@
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "react-router": "^2.7.0",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.3",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
     "faucet": "0.0.1",
-    "http-server": "^0.9.0",
     "path-alias": "0.0.7",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
