--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /usr/src/api
 
 # Install app dependencies
 COPY package.json /usr/src/api/
-RUN npm install
+RUN npm install --production
 
 # Bundle app source
 COPY . /usr/src/api
