[ENV] Get rid of dotenv library, use scripts instead

--- a/src/api/.env.example
+++ b/src/api/.env.example
@@ -1,4 +1,4 @@
-NODE_DB_ADDRESS=mongodb://localhost:27017
-COLLECTORS_ADDRESS=http://localhost:8001
-NODE_PORT=8002
-DEBUG=*
+export NODE_DB_ADDRESS=mongodb://localhost:27017
+export COLLECTORS_ADDRESS=http://localhost:8001
+export NODE_PORT=8002
+export DEBUG=
