--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "./bin/start",
     "inspector": "node --debug-brk --inspect index.js",
     "test": "./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet",
     "test-inspector": "node --debug-brk --inspect ./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet"
@@ -13,7 +13,6 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^2.2.0",
-    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "global": "^4.3.0",
     "lodash": "^4.13.1",
