--- a/src/web/.env.example
+++ b/src/web/.env.example
@@ -1,3 +1,4 @@
-NODE_API_URL=http://localhost:8002
-NODE_PORT=8000
-DEBUG=*
+export NODE_API_URL=http://localhost:8002
+export NODE_PORT=8000
+export NODE_ENV=development
+export DEBUG=
