--- a/src/collectors/.env.example
+++ b/src/collectors/.env.example
@@ -1,10 +1,10 @@
-NODE_PORT=8001
+export NODE_PORT=8001
 
-DEBUG=collectors:*
+export DEBUG=collectors:*
 
-TWITTER_CONSUMER_KEY=SECRET
-TWITTER_CONSUMER_SECRET=SECRET
-TWITTER_ACCESS_TOKEN_KEY=SECRET
-TWITTER_ACCESS_TOKEN_SECRET=SECRET
+export TWITTER_CONSUMER_KEY=SECRET
+export TWITTER_CONSUMER_SECRET=SECRET
+export TWITTER_ACCESS_TOKEN_KEY=SECRET
+export TWITTER_ACCESS_TOKEN_SECRET=SECRET
 
-YOUTUBE_APP_KEY=SECRET
+export YOUTUBE_APP_KEY=SECRET
