--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,6 +13,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "bunyan-request-logger": "^1.1.0",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
@@ -29,16 +36,10 @@
     "react-router": "^2.7.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.3",
@@ -48,8 +49,7 @@
     "path-alias": "0.0.7",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
-    "tape": "^4.6.0",
-    "webpack": "^1.13.2"
+    "tape": "^4.6.0"
   },
   "engines": {
     "node": "6.3.0"
