--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "co": "^4.6.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "global": "^4.3.0",
+    "http-errors": "^1.5.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.4",
     "node-fetch": "^1.5.3",
