--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,12 +13,16 @@
   "license": "MIT",
   "dependencies": {
     "co": "^4.6.0",
+    "co-express": "^1.2.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-pino-logger": "^1.1.0",
     "global": "^4.3.0",
+    "http-errors": "^1.5.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.4",
-    "node-fetch": "^1.5.3"
+    "node-fetch": "^1.5.3",
+    "pino": "^2.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
@@ -31,6 +35,9 @@
     "path-alias": "0.0.7",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
+    "sinon-as-promised": "^4.0.2",
+    "sinon-mongoose": "^1.3.0",
+    "supertest": "^2.0.0",
     "tape": "^4.6.0"
   },
   "engines": {
