--- a/src/nginx/Dockerfile
+++ b/src/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM tutum/nginx
 RUN rm /etc/nginx/sites-enabled/default
 ADD sites-enabled/ /etc/nginx/sites-enabled
-ADD common_config/ /etc/nginx/common_config
+ADD common-config/ /etc/nginx/common-config
