--- a/src/web/package.json
+++ b/src/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./bin/start",
     "build": "./bin/build",
-    "debug": "./bin/debug",
+    "inspector": "./bin/inspector",
     "test": "./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet",
     "test-inspector": "node --debug-brk --inspect ./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet"
   },
@@ -20,14 +20,15 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "bunyan-request-logger": "^1.1.0",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-pino-logger": "^1.1.0",
     "global": "^4.3.0",
     "lodash": "^4.13.1",
     "node-fetch": "^1.5.3",
+    "pino": "^2.10.1",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
