--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-sources",
+  "name": "collectors",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,13 +13,14 @@
   "license": "MIT",
   "dependencies": {
     "co": "^4.6.0",
-    "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-pino-logger": "^1.1.0",
     "global": "^4.3.0",
     "http-errors": "^1.5.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.4",
     "node-fetch": "^1.5.3",
+    "pino": "^2.10.1",
     "twitter": "^1.3.0"
   },
   "devDependencies": {
