--- a/src/web/package.json
+++ b/src/web/package.json
@@ -33,7 +33,7 @@
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
+    "react-router": "^4.0.0-alpha.3",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
