--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,20 @@
 {
-    'extends': 'airbnb',
-    'ecmaFeatures': {'modules': true},
-    'env': {
-        'es6': true,
-        'browser': true,
-        'node': true
+    "extends": "airbnb",
+    "ecmaFeatures": { "modules": true },
+    "env": {
+        "es6": true,
+        "browser": true,
+        "node": true,
+        "development": {
+            "plugins": ["transform-react-jsx-source"]
+        }
     },
-    'parser': 'babel-eslint',
-    'rules': {
-        'max-len': [1, 80],
-        'comma-dangle': [1],
-        'guard-for-in': [0],
-        'new-cap': [0],
-        'no-confusing-arrow': [1]
+    "parser": "babel-eslint",
+    "rules": {
+        "max-len": [1, 80],
+        "comma-dangle": [1],
+        "guard-for-in": [0],
+        "new-cap": [0],
+        "no-confusing-arrow": [1]
     }
 }
