--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -1,22 +1,12 @@
-FROM node:6.3.0
+FROM node:6.6.0-wheezy
 
 MAINTAINER cmwd <pwojtkowiak@gmail.com>
 
-RUN useradd --user-group --create-home --shell /bin/false api
+RUN mkdir -p /var/www/api
 
-ENV HOME=/home/api
+COPY . /var/www/api
+WORKDIR /var/www/api
 
-COPY package.json npm-shrinkwrap.json $HOME/app/
-RUN chown -R api:api $HOME/*
-
-USER api
-
-WORKDIR $HOME/app
-RUN npm install
-
-USER root
-COPY . $HOME/app
-RUN chown -R api:api $HOME/*
-USER api
+RUN npm install --production
 
 CMD ["npm", "start"]
