--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,7 @@
     "env": {
         "es6": true,
         "browser": true,
-        "node": true,
-        "development": {
-            "plugins": ["transform-react-jsx-source"]
-        }
+        "node": true
     },
     "parser": "babel-eslint",
     "rules": {
