--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
@@ -22,12 +23,16 @@
     "babel-preset-stage-0": "^6.5.0",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
+    "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "express-pino-logger": "^1.1.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "global": "^4.3.0",
     "lodash": "^4.13.1",
     "node-fetch": "^1.5.3",
+    "node-sass": "^3.10.0",
     "pino": "^2.10.1",
+    "postcss-loader": "^0.13.0",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
@@ -37,6 +42,8 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
