--- a/src/web/package.json
+++ b/src/web/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^4.0.0-alpha.3",
+    "react-youtube": "^7.2.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
