--- a/src/web/package.json
+++ b/src/web/package.json
@@ -23,14 +23,20 @@
     "babel-preset-stage-0": "^6.5.0",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
+    "co-express": "^1.2.2",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
+    "express-jwt": "^5.0.0",
     "express-pino-logger": "^1.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "global": "^4.3.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.13.1",
     "node-fetch": "^1.5.3",
     "node-sass": "^3.10.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "pino": "^2.10.1",
     "postcss-loader": "^0.13.0",
     "pug": "^2.0.0-beta6",
