Use yarn instead of npm (#13)

--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,11 +2,11 @@ FROM node:6.6.0-wheezy
 
 MAINTAINER cmwd <pwojtkowiak@gmail.com>
 
-RUN mkdir -p /var/www/api
-
+RUN mkdir -p /var/www/api && \
+  curl -o- -L https://yarnpkg.com/install.sh | bash
 COPY . /var/www/api
 WORKDIR /var/www/api
 
-RUN npm install --production
+RUN $HOME/.yarn/bin/yarn install
 
 CMD ["npm", "start"]
