--- a/src/collectors/Dockerfile
+++ b/src/collectors/Dockerfile
@@ -2,11 +2,12 @@ FROM node:6.6.0-wheezy
 
 MAINTAINER cmwd <pwojtkowiak@gmail.com>
 
-RUN mkdir -p /var/www/collectors
+RUN mkdir -p /var/www/collectors && \
+  curl -o- -L https://yarnpkg.com/install.sh | bash
 
 COPY . /var/www/collectors
 WORKDIR /var/www/collectors
 
-RUN npm install --production
+RUN $HOME/.yarn/bin/yarn install
 
 CMD ["npm", "start"]
