--- a/src/web/Dockerfile
+++ b/src/web/Dockerfile
@@ -2,11 +2,12 @@ FROM node:6.6.0-wheezy
 
 MAINTAINER cmwd <pwojtkowiak@gmail.com>
 
-RUN mkdir -p /var/www/web
+RUN mkdir -p /var/www/web && \
+  curl -o- -L https://yarnpkg.com/install.sh | bash
 
 COPY . /var/www/web
 WORKDIR /var/www/web
 
-RUN npm install --production
+RUN $HOME/.yarn/bin/yarn install
 
 CMD ["npm", "start"]
