--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "co": "^4.6.0",
     "express": "^4.14.0",
     "express-pino-logger": "^1.1.0",
