--- a/src/web/package.json
+++ b/src/web/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "chokidar": "^1.6.1",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
     "co-express": "^1.2.2",
