--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./bin/start",
-    "inspector": "node --debug-brk --inspect index.js",
-    "test": "./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet",
-    "test-inspector": "node --debug-brk --inspect ./node_modules/.bin/tape -r ./tests/config ./tests/**/*.test.js | faucet"
+    "start": "make run",
+    "test": "make test"
   },
   "author": "",
   "license": "MIT",
@@ -25,11 +23,12 @@
     "twitter": "^1.3.0"
   },
   "devDependencies": {
-    "faucet": "0.0.1",
-    "path-alias": "0.0.7",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
     "proxyquire": "^1.7.10",
-    "sinon": "^1.17.4",
-    "tape": "^4.6.0"
+    "sinon": "^1.17.6",
+    "sinon-as-promised": "^4.0.2",
+    "supertest": "^2.0.1"
   },
   "engines": {
     "node": "6.6.0"
