--- a/src/api/package.json
+++ b/src/api/package.json
@@ -30,6 +30,8 @@
     "validator": "^6.0.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "co-mocha": "^1.1.3",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
     "proxyquire": "^1.7.10",
