--- a/src/collectors/Makefile
+++ b/src/collectors/Makefile
@@ -36,6 +36,9 @@ test:
 	$(MOCHA) \
 		--reporter $(REPORTER) \
 		--ui tdd \
+		--require co-mocha \
+		--full-trace \
+		$(if $(grep), --grep $(grep)) \
 		$(TEST_PATH)
 
 test-watch:
@@ -51,6 +54,8 @@ test-watch:
 				$(MOCHA) \
 		 			--reporter $(REPORTER) \
 		 			--ui tdd \
+		 			--require co-mocha \
+		 			$(if $(grep), --grep $(grep)) \
 		 			--growl $(TEST_PATH)"
 
 test-inspector:
@@ -64,6 +69,8 @@ test-inspector:
 		--debug-brk \
 		--reporter $(REPORTER) \
 		--ui tdd \
+		--require co-mocha \
+		$(if $(grep), --grep $(grep)) \
 		$(TEST_PATH)
 
 .PHONY: run run-dev run-inspector test test-watch test-inspector
