--- a/src/collectors/package.json
+++ b/src/collectors/package.json
@@ -23,6 +23,8 @@
     "twitter": "^1.3.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "co-mocha": "^1.1.3",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
     "proxyquire": "^1.7.10",
