--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,9 @@
     "parser": "babel-eslint",
     "rules": {
         "max-len": [1, 80],
-        "comma-dangle": [1],
-        "guard-for-in": [0],
-        "new-cap": [0],
-        "no-confusing-arrow": [1]
+        "comma-dangle": 1,
+        "guard-for-in": 0,
+        "new-cap": 0,
+        "no-confusing-arrow": 0,
     }
 }
