--- a/src/web/package.json
+++ b/src/web/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-require-ignore": "^0.0.2",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
@@ -52,7 +53,17 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-eslint": "^7.1.0",
+    "eslint": "^3.9.1",
+    "eslint-codeframe-formatter": "^1.0.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-import-resolver-node": "^0.2.3",
+    "eslint-plugin-flowtype": "^2.25.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "2",
+    "eslint-plugin-react": "^6.6.0"
+  },
   "engines": {
     "node": "6.6.0"
   }
