--- a/src/awc-markdown/package.json
+++ b/src/awc-markdown/package.json
@@ -9,15 +9,16 @@
     "classnames": "^2.2.5",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
+    "react-contenteditable": "^2.0.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "semantic-ui-react": "^0.61.10"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "NODE_PATH=./src react-scripts start",
+    "build": "NODE_PATH=./src react-scripts build",
+    "test": "NODE_PATH=./src react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
