--- a/src/awc-markdown/package.json
+++ b/src/awc-markdown/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
-    "semantic-ui-react": "^0.62.1"
+    "semantic-ui-react": "^0.62.1",
+    "yaml": "^0.3.0"
   },
   "scripts": {
     "start": "NODE_PATH=./src react-scripts start",
