--- a/src/awc-markdown/package.json
+++ b/src/awc-markdown/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "js-yaml": "^3.7.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
-    "semantic-ui-react": "^0.62.1",
-    "yaml": "^0.3.0"
+    "semantic-ui-react": "^0.62.1"
   },
   "scripts": {
     "start": "NODE_PATH=./src react-scripts start",
