--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     links:
       - mongo
     environment:
-      - DB_URL=mongodb://mongo:27017
+      - DB_ADDRESS=mongodb://mongo:27017
       - APP_PORT=8002
   editor:
     image: cmwd/awesome-conferences-editor
