--- a/src/editor/package.json
+++ b/src/editor/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router-dom": "next",
     "semantic-ui-react": "^0.62.1",
     "yamljs": "^0.2.8"
   },
